<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".QuestionOne"
    android:gravity="center_horizontal"
    android:background="#03A9F4">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical">

    <TextView
        android:id="@+id/textViewLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_1"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_marginTop="70dp"/>


    <TextView
        android:id="@+id/textViewQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/which_of_the_following_are_part_of_the_5_senses"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_marginTop="50dp"/>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/touch"
        android:layout_marginTop="50dp"
        android:textColor="#FFFFFF"/>

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/taste"
        android:textColor="#FFFFFF"/>

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sight"
        android:textColor="#FFFFFF"/>

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:textColor="#FFFFFF"/>

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/smell"
        android:textColor="#FFFFFF"/>

    <Button
        android:id="@+id/submit"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Next Question" />
    </LinearLayout>

</ScrollView>